--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "key-mirror": "1.0.1",
     "localforage": "1.7.3",
     "localforage-observable": "2.0.1",
+    "lodash": "4.17.20",
     "mark.js": "8.11.1",
     "marked": "github:mattermost/marked#87769262aa02e1784570f61f4f962050e07cc335",
     "mattermost-redux": "github:mattermost/mattermost-redux#24c5ca06b4da9db15fe3a6b6a0d7de1a8f45ff52",
@@ -123,6 +124,7 @@
     "babel-eslint": "10.1.0",
     "babel-jest": "26.1.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-lodash": "3.3.4",
     "babel-plugin-typescript-to-proptypes": "0.17.1",
     "browser-resolve": "1.11.3",
     "bundle-loader": "0.5.6",
